plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'rae.wc'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
}

sourceCompatibility = '22'
targetCompatibility = '22'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'rae.wc.wcontroller'
    mainClass = 'rae.wc.wcontroller.WCApplication'
}

javafx {
    version = '22.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'Weight Controller Lite'
    }
    jpackage {
        installerType = 'deb' // or 'rpm', depending on your Linux distribution
        jvmArgs = [
                '--add-modules', 'javafx.controls,javafx.fxml'
        ]
        installerOptions = [
                '--app-version', '0.1',
                '--name', 'Weight Controller',
                '--vendor', 'Rae',
                '--linux-shortcut',
                '--linux-menu-group', 'Utility'
        ]
    }

}

jlinkZip {
    group = 'distribution'
}

jar {
    manifest {
        attributes(
                'Main-Class': 'rae.wc.wcontroller.WCApplication'
        )
    }
}